# ansible-practice

./: .envrc  .gitignore  README.md  ansible  hosts  pyproject.toml  site.yml  wordpress.yml
.direnv/aliases/: ansible
roles/common/tasks/: main.yml  ufw.yml
roles/wordpress/tasks/: main.yml  mariadb.yml  nginx.yml  php.yml  ping.yml  ppa.yml  wordpress.yml
roles/wordpress/templates/: wordpress.conf.j2  wp-config.php.j2
roles/wordpress/vars/: main.yml  mariadb.yml  php.yml  wordpress.yml
