[tool.poetry]
name = "ansible-practice"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
